--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,8 @@ ul.web{ position:absolute; left:0; top:0; width:100%; height:100%;  }
 ul.web>li{ height:100%; min-width:1366px; overflow:hidden; font-size:50px; text-align:center; color:#fff; }
 
 /*nav*/
-
+.hinge1{width:100px; height:100px;border-radius:20px; background:#CC9966;position:absolute; z-index: 100; left:200px; top:70px;}
+.hinge2{width:100px; height:100px;border-radius:20px; background:#CC6699;position:absolute; z-index: 100; right:200px; top:70px;}
 .page_btn{ width:60px; height:40px; position:absolute; right:50px; top:40px; z-index:20; text-align:center; line-height:40px; }
 .page_btn a{ width:80px; height:40px; display:block; margin-top:10px; font-size:20px;  color:#fff; position:relative; transition:0.3s all ease; }
 .page_btn a:hover{transform:rotate(360deg); border-radius:50%; background:#fff; font-size:24px; color:#f60; }
@@ -18,10 +19,13 @@ ul.web>li{ height:100%; min-width:1366px; overflow:hidden; font-size:50px; text-
 /*welcome*/
 @-webkit-keyframes test{
   
-   0%{ text-shadow:0 0 2px #CCCCFF;}
+   0%{ text-shadow:0 0 2px #6666CC;}
+
+   25%{ text-shadow:0 0 2px #990099;}
  
   50%{text-shadow:0 0 2px #CCCC99;}
   
+  75%{text-shadow:0 0 2px #00FFFF;}
   100%{ text-shadow:0 0 0 #fff555;}
 }
 @-ms-keyframes test{
