--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,8 @@ body{ overflow: hidden;}
 #web_box{ width:100%; height:100%; overflow:hidden; position:absolute; }
 ul.web{ position:absolute; left:0; top:0; width:100%; height:100%;  }
 ul.web>li{ height:100%; min-width:1366px; overflow:hidden; font-size:50px; text-align:center; color:#fff; }
+#page ,#works, #me{background:-webkit-linear-gradient(#747a74,#8d9790,#d1bba5,#99a099)}
+.art { background:#000;}
 
 /*nav*/
 .hinge1{width:100px; height:100px;border-radius:20px; background:#CC9966;position:absolute; z-index: 100; left:200px; top:70px;}
@@ -44,9 +46,9 @@ ul.web>li{ height:100%; min-width:1366px; overflow:hidden; font-size:50px; text-
   
   100%{ text-shadow:0 0 0 #fff555;}
 }
-.wel{cursor:pointer; width:420px;margin:30px auto;position: relative; }
+.wel{cursor:pointer; width:420px;margin:30px auto;position: relative; z-index:999;}
 .wel span{-webkit-animation:5s test linear infinite;-moz-animation:5s test linear infinite;-ms-animation:5s test linear infinite; font-size:30px; color:rgba(0,0,0,0); text-shadow:0 0 200px #fff; opacity:0; transition:1s all ease;}
-.wel span.on{text-shadow:0 0 0 #fff; opacity:1; }
+.wel span.on{text-shadow:0 0 0 #fff; opacity:1;}
 
 
 /*down*/
